Fix JWT auth, solved problems tracking, and Problems UI